Fixed some comments to make the formatting look better in the static HTML

--- a/Vertical mixing in numerical models.ipynb
+++ b/Vertical mixing in numerical models.ipynb
@@ -347,20 +347,28 @@
    "source": [
     "using Plots;\n",
     "\n",
-    "dt = 0.1;  # time step = 0.1 second\n",
-    "run_time = 50;  # how long the model should simulate in seconds\n",
-    "nsteps = convert(Int64, run_time/dt);  # how many steps the model needs to take. \n",
-    "                                       # Julia is a bit picky about types compared to Matlab, so convert from float \n",
-    "                                       # to integer (or the indexing in the for loop fails)\n",
-    "c = zeros(nsteps+1, 2);  # set up an array to hold the concentration in both boxes over the modeled time\n",
-    "c[1,1] = 10.0;  # initial condition: box 1 has a concentration of 10.0 (arbitrary units) and box 2 has nothing\n",
-    "k = 0.1;  # mixing rate constant in s^{-1}\n",
+    "# time step = 0.1 second\n",
+    "dt = 0.1;\n",
+    "# how long the model should simulate in seconds\n",
+    "run_time = 50;  \n",
+    "# how many steps the model needs to take. \n",
+    "# Julia is a bit picky about types compared to Matlab, so convert from float to integer (or the indexing in the for loop fails)\n",
+    "nsteps = convert(Int64, run_time/dt);  \n",
+    "\n",
+    "\n",
+    "# set up an array to hold the concentration in both boxes over the modeled time\n",
+    "c = zeros(nsteps+1, 2);  \n",
+    "# initial condition: box 1 has a concentration of 10.0 (arbitrary units) and box 2 has nothing\n",
+    "c[1,1] = 10.0;  \n",
+    "# mixing rate constant in s^{-1}\n",
+    "k = 0.1;\n",
     "for n=1:nsteps\n",
-    "    dc_dt = -k*(c[n,1] - c[n,2]);  # calculate the change in concentration at timestep i\n",
-    "    c[n+1, 1] = c[n, 1] + dc_dt * dt;  # calculate the box 1 concentration at the next timestep, \n",
-    "                                       # assuming dc_dt is constant over the timestep\n",
-    "    c[n+1, 2] = c[n, 2] - dc_dt * dt;  # calculate the box 2 concentration at the next timestep, \n",
-    "                                       # remembering dc_2/dt = - dc_1/dt\n",
+    "    # calculate the change in concentration at timestep i\n",
+    "    dc_dt = -k*(c[n,1] - c[n,2]);  \n",
+    "    # calculate the box 1 concentration at the next timestep, assuming dc_dt is constant over the timestep\n",
+    "    c[n+1, 1] = c[n, 1] + dc_dt * dt;\n",
+    "    # calculate the box 2 concentration at the next timestep, remembering dc_2/dt = - dc_1/dt\n",
+    "    c[n+1, 2] = c[n, 2] - dc_dt * dt;\n",
     "end\n",
     "\n",
     "time_vector = (0.0:nsteps)*dt;\n",
@@ -5930,28 +5938,34 @@
     }
    ],
    "source": [
-    "dt = 0.1;  # time step = 0.1 second\n",
-    "run_time = 500;  # how long the model should simulate in seconds\n",
-    "nsteps = convert(Int64, run_time/dt);  # how many steps the model needs to take. \n",
-    "                                       # Julia is a bit picky about types compared to Matlab, so convert from float \n",
-    "                                       # to integer (or the indexing in the for loop fails)\n",
-    "nboxes = 10;  # how many boxes to include in the model\n",
-    "c = zeros(nsteps+1, nboxes);  # set up an array to hold the concentration in both boxes over the modeled time\n",
-    "c[1,1] = 10.0;  # initial condition: box 1 has a concentration of 10.0 (arbitrary units) and box 2 has nothing\n",
-    "k = 0.1;  # mixing rate constant in s^{-1}\n",
+    "# time step = 0.1 second\n",
+    "dt = 0.1;\n",
+    "# how long the model should simulate in seconds\n",
+    "run_time = 500;\n",
+    "# how many steps the model needs to take. \n",
+    "# Julia is a bit picky about types compared to Matlab, so convert from float to integer (or the indexing in the for loop fails)\n",
+    "nsteps = convert(Int64, run_time/dt);  \n",
+    " # how many boxes to include in the model\n",
+    "nboxes = 10;\n",
+    "# set up an array to hold the concentration in all boxes over the modeled time\n",
+    "c = zeros(nsteps+1, nboxes);\n",
+    "# initial condition: box 1 has a concentration of 10.0 (arbitrary units) and box 2 has nothing\n",
+    "c[1,1] = 10.0;\n",
+    "# mixing rate constant in s^{-1}\n",
+    "k = 0.1;  \n",
     "for n=1:nsteps\n",
     "    for i=1:nboxes\n",
     "        dc_dt = 0.0;\n",
     "        if i > 1\n",
-    "            dc_dt += -k*(c[n,i] - c[n,i-1]); # calculate the change in concentration at timestep n due to the box \n",
-    "                                             # below as long as we're not in the bottom box\n",
+    "            # calculate the change in concentration at timestep n due to the box below as long as we're not in the bottom box\n",
+    "            dc_dt += -k*(c[n,i] - c[n,i-1]); \n",
     "        end\n",
     "        if i < nboxes\n",
-    "            dc_dt += -k*(c[n,i] - c[n,i+1]); # calculate the change in concentration at timestep n due to the box \n",
-    "                                             # above as long as we're not in the top box\n",
+    "            # calculate the change in concentration at timestep n due to the box above as long as we're not in the top box\n",
+    "            dc_dt += -k*(c[n,i] - c[n,i+1]); \n",
     "        end\n",
-    "        c[n+1, i] = c[n, i] + dc_dt * dt;  # calculate the box i concentration at the next timestep, \n",
-    "                                           # assuming dc_dt is constant over the timestep\n",
+    "        # calculate the box i concentration at the next timestep, assuming dc_dt is constant over the timestep\n",
+    "        c[n+1, i] = c[n, i] + dc_dt * dt;  \n",
     "    end\n",
     "end\n",
     "\n",
@@ -11359,18 +11373,25 @@
     }
    ],
    "source": [
-    "dt = 0.1;  # time step = 0.1 second\n",
-    "dx = 1000;  # box width in meters\n",
-    "D = 0.1*dx^2;  # diffusion constant in m^2/s. Calculate the D equivalent to our old k for given dx \n",
+    "# time step = 0.1 second\n",
+    "dt = 0.1;\n",
+    "# box width in meters\n",
+    "dx = 1000;\n",
+    "# diffusion constant in m^2/s. Calculate the D equivalent to our old k for given dx \n",
+    "D = 0.1*dx^2;  \n",
     "\n",
-    "run_time = 500;  # how long the model should simulate in seconds\n",
-    "nsteps = convert(Int64, run_time/dt);  # how many steps the model needs to take. \n",
-    "                                       # Julia is a bit picky about types compared to Matlab, so convert from float \n",
-    "                                       # to integer (or the indexing in the for loop fails)\n",
+    "# how long the model should simulate in seconds\n",
+    "run_time = 500;\n",
+    "# how many steps the model needs to take. \n",
+    "# Julia is a bit picky about types compared to Matlab, so convert from float to integer (or the indexing in the for loop fails)\n",
+    "nsteps = convert(Int64, run_time/dt);  \n",
     "\n",
-    "nboxes = 10;  # how many boxes to include in the model\n",
-    "c = zeros(nsteps+1, nboxes);  # set up an array to hold the concentration in all boxes over the modeled time.\n",
-    "c[1,1] = 10.0;  # initial condition: box 1 has a concentration of 10.0 (arbitrary units) and box 2 has nothing\n",
+    "# how many boxes to include in the model\n",
+    "nboxes = 10;\n",
+    "# set up an array to hold the concentration in all boxes over the modeled time.\n",
+    "c = zeros(nsteps+1, nboxes);\n",
+    "# initial condition: box 1 has a concentration of 10.0 (arbitrary units) and box 2 has nothing\n",
+    "c[1,1] = 10.0;  \n",
     "# Boundary conditions\n",
     "bottom_bc = 0.0;\n",
     "top_bc = 1.0;\n",
@@ -16684,19 +16705,26 @@
     "    return vcat(bc_bottom, c_vec, bc_top)\n",
     "end\n",
     "\n",
-    "dt = 0.1;  # time step = 0.1 second\n",
-    "dx = 1000;  # box width in meters\n",
-    "D = 0.1*dx^2;  # diffusion constant in m^2/s. Calculate the D equivalent to our old k for given dx \n",
+    "# time step = 0.1 second\n",
+    "dt = 0.1;\n",
+    "# box width in meters\n",
+    "dx = 1000;\n",
+    "# diffusion constant in m^2/s. Calculate the D equivalent to our old k for given dx\n",
+    "D = 0.1*dx^2;  \n",
     "\n",
-    "run_time = 500;  # how long the model should simulate in seconds\n",
-    "nsteps = convert(Int64, run_time/dt);  # how many steps the model needs to take. \n",
-    "                                       # Julia is a bit picky about types compared to Matlab, so convert from float \n",
-    "                                       # to integer (or the indexing in the for loop fails)\n",
+    "# how long the model should simulate in seconds\n",
+    "run_time = 500;\n",
+    "# how many steps the model needs to take. \n",
+    "# Julia is a bit picky about types compared to Matlab, so convert from float to integer (or the indexing in the for loop fails)\n",
+    "nsteps = convert(Int64, run_time/dt);  \n",
     "\n",
-    "nboxes = 10;  # how many boxes to include in the model\n",
-    "c = zeros(nsteps+1, nboxes);  # set up an array to hold the concentration in all boxes over the modeled time.\n",
-    "c[1,1] = 10.0;  # initial condition: box 1 has a concentration of 10.0 (arbitrary units) and box 2 has nothing\n",
-    "# Boundary conditions - set to no flux\n",
+    "# how many boxes to include in the model\n",
+    "nboxes = 10;\n",
+    "# set up an array to hold the concentration in all boxes over the modeled time.\n",
+    "c = zeros(nsteps+1, nboxes);\n",
+    "# initial condition: box 1 has a concentration of 10.0 (arbitrary units) and box 2 has nothing\n",
+    "c[1,1] = 10.0;  \n",
+    "# Boundary conditions - set to no flux through either boundary\n",
     "bottom_bc = 0.0;\n",
     "top_bc = 0.0;\n",
     "\n",
